feat(DataDict): 数据字典逻辑
