# bootstrap/route.php
@@ -42,4 +42,5 @@ return function (App $app) {
      * data dict
      */
     $app->get('/api/data-dict/index', \App\Action\DataDict\IndexAction::class);
+    $app->post('/api/data-dict/store', \App\Action\DataDict\StoreAction::class);
 };
